--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.8.3",
+    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.14.12",
-    "swiper": "^6.4.15",
+    "swiper": "^6.5.0",
+    "typescript": "^4.2.3",
     "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
@@ -27,7 +29,6 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
-    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.1"
   }
